--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,9 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body {
+    background-color: #c52836;
+  }
+</style>
